test/expected/explain_main_fiapci_i.out
explain int main( int, char *argv[], int )
                                     ^
38: error: invalid main() parameter type "int"; must be "char*[]"
